5-Trabalhando com imagens

--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
   <p>Olá Web <mark>Developers</mark> </p>
   <p><ruby>水 <rt>água</rt></ruby> </p>
   <p>Olá Web <code>&lt;h1&gt;</code> </p>
-
-
+  <figure>
+    
+  <img width="200" 
+  height="200" 
+  src="imagens/html.png" alt="imagemHtml">
+  <figcaption>Figura 1 - Logo do Html</figcaption>
+</figure>
 
 
 
