--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Meu Site</title>
+  <style>
+    h1{
+      font-size: 50px;
+      background-color: aquamarine;
+    }
+  </style>
 </head>
 <body>
   
@@ -68,6 +75,7 @@ href="imagens/html.png">
   height="200" 
   src="imagens/html.png" alt="imagemHtml"></a>
 
+  <h1 style="background-color:blueviolet">TreinaWeb</h1>
 
 
 
